templates/infra.yaml
### --- Cloud Infra Creation via CICD CFT Template ####

AWSTemplateFormatVersion: "2010-09-09"
Description: Deploy basic infrastructure using CloudFormation

Parameters:

  VpcCidr:
    Type: String
    Default: "10.0.0.0/16"
    Description: CIDR block for the VPC

  SubnetCidr:
    Type: String
    Default: "10.0.1.0/24"
    Description: CIDR block for the subnet

  VpcName:
    Type: String
    Default: "NawazVPC"
    Description: Name tag for the VPC    


Resources:

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      Tags:
        - Key: Name
          Value: !Ref VpcName

  MySubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: !Ref SubnetCidr
      MapPublicIpOnLaunch: true

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  # MyInstance:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: ami-0c55b159cbfafe1f0  # Use a region-specific AMI
  #     InstanceType: t2.micro
  #     SubnetId: !Ref MySubnet
  #     SecurityGroupIds:
  #       - !Ref MySecurityGroup
  #     Tags:
  #       - Key: Name
  #         Value: CFT-Web-Server

  # MyS3Bucket:
  #   Type: AWS::S3::Bucket
  #   Properties:
  #     BucketName: !Sub "my-cft-bucket-${AWS::AccountId}-${AWS::Region}"
